--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         device to your computer and hit the button:
       </p>
       <esp-web-install-button
-        manifest="https://firmware.esphome.io/esphome-web/manifest.json"
+        manifest="https://firmware.esphome.io/esp-web-tools/manifest.json"
       >
         <i slot="unsupported">
           The demo is not available because your browser does not support Web
@@ -366,7 +366,7 @@
       </p>
       <pre>
 &lt;esp-web-install-button
-  manifest="https://firmware.esphome.io/esphome-web/manifest.json"
+  manifest="https://firmware.esphome.io/esp-web-tools/manifest.json"
 >&lt;/esp-web-install-button></pre
       >
       <p>
@@ -549,7 +549,7 @@ button.overrides = {
       </p>
       <pre>
 &lt;esp-web-install-button
-  manifest="https://firmware.esphome.io/esphome-web/manifest.json"
+  manifest="https://firmware.esphome.io/esp-web-tools/manifest.json"
 >
   &lt;button slot="activate">Custom install button&lt;/button>
   &lt;span slot="unsupported">Ah snap, your browser doesn't work!&lt;/span>
