Tweak launch button look

--- a/index.html
+++ b/index.html
@@ -536,6 +536,7 @@ button.overrides = {
       <ul>
         <li><code>--esp-tools-button-color</code></li>
         <li><code>--esp-tools-button-text-color</code></li>
+        <li><code>--esp-tools-button-border-radius</code></li>
       </ul>
       <p>There are also some attributes that can be used for styling:</p>
       <table>
