Polyfill web serial on Android

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         Web Serial is available in Google Chrome and Microsoft Edge
         browsers<span class="not-supported-i hidden">
           (but not on your iOS device)</span
-        >. Android support should be possible but has not been implemented yet.
+        >. This includes Android.
       </p>
 
       <h3 id="improv">Configuring Wi-Fi</h3>
