Add openspool logo

--- a/index.html
+++ b/index.html
@@ -281,6 +281,19 @@
           </div>
           <div class="name">OpenEpaperLink</div>
         </a>
+        <a
+          href="https://openspool.io"
+          target="_blank"
+          class="project"
+        >
+          <div class="logo">
+            <img
+              src="static/logos/openspool.png"
+              alt="OpenSpool logo"
+            />
+          </div>
+          <div class="name">OpenSpool</div>
+        </a>
       </div>
 
       <h2>How it works</h2>
