Update more branding to be OHF

--- a/index.html
+++ b/index.html
@@ -281,16 +281,9 @@
           </div>
           <div class="name">OpenEpaperLink</div>
         </a>
-        <a
-          href="https://openspool.io"
-          target="_blank"
-          class="project"
-        >
+        <a href="https://openspool.io" target="_blank" class="project">
           <div class="logo">
-            <img
-              src="static/logos/openspool.png"
-              alt="OpenSpool logo"
-            />
+            <img src="static/logos/openspool.png" alt="OpenSpool logo" />
           </div>
           <div class="name">OpenSpool</div>
         </a>
@@ -594,7 +587,9 @@ button.overrides = {
       <div class="footer">
         <div class="initiative">
           ESP Web Tools is a project by
-          <a href="https://esphome.io">ESPHome</a>.<br />
+          <a href="https://esphome.io">ESPHome</a>,
+          <a href="https://www.openhomefoundation.org">Open Home Foundation</a
+          >.<br />
           Development is funded by
           <a href="https://www.nabucasa.com">Nabu Casa</a>.
         </div>
