--- a/index.html
+++ b/index.html
@@ -287,6 +287,12 @@
           </div>
           <div class="name">OpenSpool</div>
         </a>
+        <a href="https://usetrmnl.com/flash" target="_blank" class="project">
+          <div class="logo">
+            <img src="static/logos/trmnl.png" alt="TRMNL logo" />
+          </div>
+          <div class="name">TRMNL</div>
+        </a>
       </div>
 
       <h2>How it works</h2>
