added Treadspan to list of projects

--- a/index.html
+++ b/index.html
@@ -299,6 +299,12 @@
           </div>
           <div class="name">NSPanel Manager</div>
         </a>
+        <a href="https://github.com/blak3r/treadspan" target="_blank" class="project">
+          <div class="logo">
+            <img src="static/logos/treadspan.svg" alt="Treadspan logo" />
+          </div>
+          <div class="name">TreadSpan</div>
+        </a>
       </div>
 
       <h2>How it works</h2>
