treadspan.svg -> .png

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         </a>
         <a href="https://github.com/blak3r/treadspan" target="_blank" class="project">
           <div class="logo">
-            <img src="static/logos/treadspan.svg" alt="Treadspan logo" />
+            <img src="static/logos/treadspan.png" alt="Treadspan logo" />
           </div>
           <div class="name">TreadSpan</div>
         </a>
