--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@ button.overrides = {
         Alternatively to a static manifest JSON file, you can generate a Blob URL of a JSON object using <a href="https://developer.mozilla.org/en-US/docs/Web/API/URL/createObjectURL_static"><code>URL.createObjectURL</code></a> to use as the manifest url. This can be useful in situations where you have many firmware bin files, e.g. previous software versions, where you don't want to have a different static manifest json file for each bin. If you are hosting on github.io, this can be paired nicely with <a href="https://docs.github.com/en/rest/repos/contents?apiVersion=2022-11-28#get-contents">github's REST API</a> to view all the bin files inside a folder.
       </p>
       <pre>
-var manifest = {
+const manifest = {
     "name": name,
     "version": version,
     "funding_url": funding_url,
@@ -576,8 +576,8 @@ var manifest = {
     ]
 }
 
-var json = JSON.stringify(manifest);
-var blob = new Blob([json], {type: "application/json"});
+const json = JSON.stringify(manifest);
+const blob = new Blob([json], {type: "application/json"});
 document.querySelector("esp-web-install-button").manifest = URL.createObjectURL(blob);
       </pre>
 
