Update esptool-js to version 0.5.6 to support ESP32C5

--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@ esptool --chip esp32 merge_bin \
         install. It allows specifying different builds for the different types
         of ESP devices. Current supported chip families are
         <code>ESP8266</code>, <code>ESP32</code>, <code>ESP32-C2</code>,
-        <code>ESP32-C3</code>, <code>ESP32-C6</code>, <code>ESP32-H2</code>,
+        <code>ESP32-C3</code>, <code>ESP32-C5</code>, <code>ESP32-C6</code>, <code>ESP32-H2</code>,
         <code>ESP32-S2</code> and <code>ESP32-S3</code>. The correct build will
         be automatically selected based on the type of the connected ESP device.
       </p>
