Add OpenDisplay to list of projects

--- a/index.html
+++ b/index.html
@@ -313,6 +313,16 @@
           </div>
           <div class="name">TreadSpan</div>
         </a>
+        <a
+          href="https://opendisplay.org/firmware/install"
+          target="_blank"
+          class="project"
+        >
+          <div class="logo">
+            <img src="static/logos/opendisplay.png" alt="OpenDisplay logo" />
+          </div>
+          <div class="name">OpenDisplay</div>
+        </a>
       </div>
 
       <h2>How it works</h2>
